# GforceNode

./: .gitignore  Cargo.toml  README.md  RELEASING.md  install.ps1  install.sh
.github/workflows/: ci.yml  cut-release.yml  release.yml
crates/node-cli/: Cargo.toml
crates/node-cli/src/: main.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: auth.rs  commands.rs  config.rs  connection.rs  heartbeat.rs  lib.rs  service.rs
crates/node-daemon/: Cargo.toml
crates/node-daemon/src/: main.rs
crates/node-executor/: Cargo.toml
crates/node-executor/src/: files.rs  git.rs  lib.rs  shell.rs  system.rs
