[package]
name = "node-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gforce-node-daemon"
path = "src/main.rs"

[dependencies]
node-core = { path = "../node-core" }
node-executor = { path = "../node-executor" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
